--- a/OC Share Sheet/MainInterface.storyboard
+++ b/OC Share Sheet/MainInterface.storyboard
@@ -33,53 +33,65 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbd-Lz-hZi">
-                                                    <rect key="frame" x="60" y="10" width="525" height="90"/>
+                                                    <rect key="frame" x="60" y="10" width="480" height="90"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rzu-rB-SXM">
-                                                            <rect key="frame" x="55" y="50" width="404" height="20"/>
-                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rzu-rB-SXM">
+                                                            <rect key="frame" x="55" y="50" width="375" height="20"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fxo-QZ-KZW">
-                                                            <rect key="frame" x="55" y="20" width="404" height="20"/>
-                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fxo-QZ-KZW">
+                                                            <rect key="frame" x="55" y="20" width="375" height="20"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstItem="Rzu-rB-SXM" firstAttribute="top" secondItem="fxo-QZ-KZW" secondAttribute="bottom" constant="10" id="50Y-WX-vrk"/>
-                                                        <constraint firstItem="Rzu-rB-SXM" firstAttribute="top" secondItem="fxo-QZ-KZW" secondAttribute="bottom" constant="10" id="Bwt-9w-uKz"/>
-                                                        <constraint firstItem="fxo-QZ-KZW" firstAttribute="leading" secondItem="gbd-Lz-hZi" secondAttribute="leading" constant="55" id="Dgg-La-gh9"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Rzu-rB-SXM" secondAttribute="bottom" constant="20" id="ddi-kD-4W7"/>
-                                                        <constraint firstItem="Rzu-rB-SXM" firstAttribute="leading" secondItem="gbd-Lz-hZi" secondAttribute="leading" constant="55" id="tyA-nb-0th"/>
-                                                        <constraint firstItem="fxo-QZ-KZW" firstAttribute="top" secondItem="gbd-Lz-hZi" secondAttribute="top" constant="20" id="zaN-za-hSV"/>
+                                                        <constraint firstItem="Rzu-rB-SXM" firstAttribute="leading" secondItem="gbd-Lz-hZi" secondAttribute="leading" constant="55" id="6sO-Ni-sbJ"/>
+                                                        <constraint firstItem="Rzu-rB-SXM" firstAttribute="top" secondItem="fxo-QZ-KZW" secondAttribute="bottom" constant="10" id="EgU-4t-dJ0"/>
+                                                        <constraint firstItem="Rzu-rB-SXM" firstAttribute="top" secondItem="fxo-QZ-KZW" secondAttribute="bottom" constant="10" id="PA8-cG-17d"/>
+                                                        <constraint firstItem="fxo-QZ-KZW" firstAttribute="leading" secondItem="gbd-Lz-hZi" secondAttribute="leading" constant="55" id="SJN-Yw-jtE"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Rzu-rB-SXM" secondAttribute="bottom" constant="20" id="kU2-xH-NUD"/>
+                                                        <constraint firstItem="fxo-QZ-KZW" firstAttribute="top" secondItem="gbd-Lz-hZi" secondAttribute="top" constant="20" id="nAg-2r-p6f"/>
                                                     </constraints>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uUd-uU-CDa">
                                                     <rect key="frame" x="15" y="10" width="90" height="90"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="90" id="0FG-sn-o2i"/>
-                                                        <constraint firstAttribute="width" constant="90" id="53I-rO-VdJ"/>
+                                                        <constraint firstAttribute="width" constant="90" id="dWL-7Z-41j"/>
+                                                        <constraint firstAttribute="height" constant="90" id="nrr-Dj-L4e"/>
                                                     </constraints>
                                                 </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7rp-X4-39g">
+                                                    <rect key="frame" x="495" y="10" width="90" height="90"/>
+                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="9p3-O2-eMB"/>
+                                                        <constraint firstAttribute="height" constant="90" id="p2R-la-Koq"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="gbd-Lz-hZi" secondAttribute="bottom" constant="2" id="7Dh-BO-nMp"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="uUd-uU-CDa" secondAttribute="bottom" constant="2" id="IQk-OS-zkc"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="gbd-Lz-hZi" secondAttribute="trailing" constant="7" id="cei-gL-D8g"/>
-                                                <constraint firstItem="uUd-uU-CDa" firstAttribute="top" secondItem="YeS-Tj-NG8" secondAttribute="topMargin" constant="2" id="f6p-0C-qt3"/>
-                                                <constraint firstItem="uUd-uU-CDa" firstAttribute="leading" secondItem="YeS-Tj-NG8" secondAttribute="leadingMargin" constant="7" id="gcq-Ey-llT"/>
-                                                <constraint firstItem="gbd-Lz-hZi" firstAttribute="leading" secondItem="YeS-Tj-NG8" secondAttribute="leadingMargin" constant="52" id="rpK-pq-d2h"/>
-                                                <constraint firstItem="gbd-Lz-hZi" firstAttribute="top" secondItem="YeS-Tj-NG8" secondAttribute="topMargin" constant="2" id="wuH-aS-bSW"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="uUd-uU-CDa" secondAttribute="bottom" constant="2" id="KKf-Fh-YFD"/>
+                                                <constraint firstItem="uUd-uU-CDa" firstAttribute="leading" secondItem="YeS-Tj-NG8" secondAttribute="leadingMargin" constant="7" id="P8d-jk-81Q"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="gbd-Lz-hZi" secondAttribute="trailing" constant="52" id="RuI-CZ-7RN"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="7rp-X4-39g" secondAttribute="trailing" constant="7" id="SU4-ey-3xx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="7rp-X4-39g" secondAttribute="bottom" constant="2" id="T9F-yW-wQa"/>
+                                                <constraint firstItem="uUd-uU-CDa" firstAttribute="top" secondItem="YeS-Tj-NG8" secondAttribute="topMargin" constant="2" id="VKf-u8-lQb"/>
+                                                <constraint firstItem="7rp-X4-39g" firstAttribute="top" secondItem="YeS-Tj-NG8" secondAttribute="topMargin" constant="2" id="dgv-TU-zEL"/>
+                                                <constraint firstItem="gbd-Lz-hZi" firstAttribute="leading" secondItem="YeS-Tj-NG8" secondAttribute="leadingMargin" constant="52" id="kAh-UH-8R7"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="gbd-Lz-hZi" secondAttribute="bottom" constant="2" id="tDU-Gl-VcO"/>
+                                                <constraint firstItem="gbd-Lz-hZi" firstAttribute="top" secondItem="YeS-Tj-NG8" secondAttribute="topMargin" constant="2" id="vPq-p2-YRE"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="backgroundCustomView" destination="gbd-Lz-hZi" id="uBb-Wk-RxA"/>
                                             <outlet property="imageForFile" destination="uUd-uU-CDa" id="g71-K7-dBO"/>
+                                            <outlet property="roundCustomView" destination="7rp-X4-39g" id="0W2-Uk-Vgp"/>
                                             <outlet property="size" destination="Rzu-rB-SXM" id="za2-dR-6cY"/>
                                             <outlet property="title" destination="fxo-QZ-KZW" id="Sx1-bk-iDC"/>
                                         </connections>
@@ -94,29 +106,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zpY-Wh-Wn4" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leadingMargin" constant="-16" id="30n-wx-QmD"/>
-                            <constraint firstItem="6bg-ed-mfL" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="topMargin" constant="112" id="5Qx-HX-4rG"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6bg-ed-mfL" secondAttribute="trailing" constant="-16" id="5XP-PP-lhy"/>
                             <constraint firstItem="d5i-Ba-RvD" firstAttribute="top" secondItem="6bg-ed-mfL" secondAttribute="bottom" id="BaM-MT-13L"/>
                             <constraint firstItem="6bg-ed-mfL" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="topMargin" constant="64" id="BiF-Hp-Ufe"/>
-                            <constraint firstItem="6bg-ed-mfL" firstAttribute="top" secondItem="zpY-Wh-Wn4" secondAttribute="bottom" id="HVm-Te-c4L"/>
-                            <constraint firstItem="6bg-ed-mfL" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leadingMargin" id="IdJ-1Q-A6O"/>
                             <constraint firstAttribute="trailingMargin" secondItem="zpY-Wh-Wn4" secondAttribute="trailing" constant="-16" id="Iyx-Eb-3bb"/>
-                            <constraint firstItem="6bg-ed-mfL" firstAttribute="trailing" secondItem="wbc-yd-nQP" secondAttribute="trailingMargin" id="f2w-KQ-TPL"/>
                             <constraint firstItem="zpY-Wh-Wn4" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="topMargin" constant="20" id="fAQ-7B-OY8"/>
                             <constraint firstItem="6bg-ed-mfL" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leadingMargin" constant="-16" id="jnS-eK-mVW"/>
-                            <constraint firstItem="6bg-ed-mfL" firstAttribute="top" secondItem="8bI-gs-bmD" secondAttribute="bottom" constant="44" id="oaG-AA-BU4"/>
-                            <constraint firstItem="d5i-Ba-RvD" firstAttribute="top" secondItem="6bg-ed-mfL" secondAttribute="bottom" constant="8" id="wqc-ZR-jug"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="5Qx-HX-4rG"/>
-                                <exclude reference="HVm-Te-c4L"/>
-                                <exclude reference="IdJ-1Q-A6O"/>
-                                <exclude reference="f2w-KQ-TPL"/>
-                                <exclude reference="oaG-AA-BU4"/>
-                                <exclude reference="wqc-ZR-jug"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="navigationBar" destination="zpY-Wh-Wn4" id="Itw-eA-7n2"/>
