--- a/OC Share Sheet/MainInterface.storyboard
+++ b/OC Share Sheet/MainInterface.storyboard
@@ -27,7 +27,7 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="110" sectionHeaderHeight="50" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6bg-ed-mfL">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="492"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FileSelectedCell" rowHeight="110" id="h7R-lj-dvI" customClass="FileSelectedCell" customModule="OC_Share_Sheet" customModuleProvider="target">
@@ -105,17 +105,32 @@
                                     <outlet property="delegate" destination="j1y-V4-xli" id="WE4-Xb-ohZ"/>
                                 </connections>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gad-k1-Oh8">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ski-H2-N9g"/>
+                                    <barButtonItem title="Item" id="Dpo-t5-Knx">
+                                        <connections>
+                                            <action selector="destinyFolderButtonTapped:" destination="j1y-V4-xli" id="vt9-MN-l6i"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="eZh-WQ-5L1"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zpY-Wh-Wn4" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leadingMargin" constant="-16" id="30n-wx-QmD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6bg-ed-mfL" secondAttribute="trailing" constant="-16" id="5XP-PP-lhy"/>
                             <constraint firstItem="6bg-ed-mfL" firstAttribute="top" secondItem="zpY-Wh-Wn4" secondAttribute="bottom" id="8ae-O6-LQ7"/>
-                            <constraint firstItem="d5i-Ba-RvD" firstAttribute="top" secondItem="6bg-ed-mfL" secondAttribute="bottom" id="BaM-MT-13L"/>
                             <constraint firstItem="6bg-ed-mfL" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="topMargin" constant="64" id="BiF-Hp-Ufe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gad-k1-Oh8" secondAttribute="trailing" constant="-16" id="Gby-5m-QRP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="zpY-Wh-Wn4" secondAttribute="trailing" constant="-16" id="Iyx-Eb-3bb"/>
+                            <constraint firstItem="gad-k1-Oh8" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leadingMargin" constant="-16" id="OB4-kE-rMs"/>
                             <constraint firstItem="zpY-Wh-Wn4" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="topMargin" constant="20" id="fAQ-7B-OY8"/>
+                            <constraint firstItem="gad-k1-Oh8" firstAttribute="top" secondItem="6bg-ed-mfL" secondAttribute="bottom" id="j1d-g4-emU"/>
                             <constraint firstItem="6bg-ed-mfL" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leadingMargin" constant="-16" id="jnS-eK-mVW"/>
+                            <constraint firstItem="d5i-Ba-RvD" firstAttribute="top" secondItem="gad-k1-Oh8" secondAttribute="bottom" id="mxJ-qg-R2e"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -124,6 +139,7 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="destinyFolderButton" destination="Dpo-t5-Knx" id="9p8-c0-Ocm"/>
                         <outlet property="navBarTopLayoutConstraint" destination="fAQ-7B-OY8" id="FrG-dl-007"/>
                         <outlet property="navigationBar" destination="zpY-Wh-Wn4" id="Itw-eA-7n2"/>
                         <outlet property="shareTable" destination="6bg-ed-mfL" id="tzz-SO-m9D"/>
